--- a/index.html
+++ b/index.html
@@ -212,10 +212,13 @@
 		<em>Conference on Neural Information Processing Systems</em> (<i><b>NeurIPS</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">MCIBI++: Soft Mining Contextual Information Beyond Image for Semantic Segmentation</a><br>
+		<a href="https://arxiv.org/abs/2209.04471" target="_blank">MCIBI++: Soft Mining Contextual Information Beyond Image for Semantic Segmentation</a><br>
 		Zhenchao Jin, Dongdong Yu, Zehuan Yuan, <b>Lequan Yu</b>.<br>
 		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2022.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/SegmentationBLWX/sssegmentation" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://arxiv.org/abs/2207.07889" target="_blank">You Should Look at All Objects</a><br>
 		Zhenchao Jin, Dongdong Yu, Luchuan Song, Zehuan Yuan, <b>Lequan Yu</b>.<br>
@@ -232,12 +235,12 @@
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Spatial-hierarchical Graph Neural Network with Dynamic Structure Learning for Histological Image Classification</a><br>
+		<a href="https://link.springer.com/chapter/10.1007/978-3-031-16434-7_18" target="_blank">Spatial-hierarchical Graph Neural Network with Dynamic Structure Learning for Histological Image Classification</a><br>
 		Wentai Hou, Helong Huang, Qiong Peng, Rongshan Yu, <b>Lequan Yu</b>, Liansheng Wang.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Reinforcement Learning Driven Intra-modal and Inter-modal Representation Learning for 3D Medical Image Classification</a><br>
+		<a href="https://link.springer.com/chapter/10.1007/978-3-031-16437-8_58" target="_blank">Reinforcement Learning Driven Intra-modal and Inter-modal Representation Learning for 3D Medical Image Classification</a><br>
 		Zhonghang Zhu, Liansheng Wang, Baptiste Magnier, Lei Zhu, Defu Zhang, <b>Lequan Yu</b>.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
@@ -857,7 +860,10 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
-			<td> 2022Spring</td><td>APAI4011/STAT4011 Natural Language Processing</td>
+			<td> 2022 Fall</td><td>STAT3612 Statistical Machine Learning</td>
+		</tr>
+		<tr>
+			<td> 2022 Spring</td><td>APAI4011/STAT4011 Natural Language Processing</td>
 		</tr>
 	</tbody>
 </table>
