--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[10/2022] One paper was accepted by TMI.
+	</li>
+	<li>
 		[09/2022] One paper was accepted by NeurIPS 2022.
 	</li>
 	<li>
