--- a/index.html
+++ b/index.html
@@ -107,8 +107,15 @@
 
 <div style="height: 240px; overflow: auto;">
 <ul>
+	
 	<li>
 		[10/2022] One paper was accepted by TMI.
+	</li>
+	<li>
+		[09/2022] Our MICCAI <a href="https://cmmca2022.casconf.cn" target="_blank">CMMCA workshop</a> paper got the <b>Best Paper Award</b>.
+	</li>
+	<li>
+		[09/2022] Our MICCAI <a href="https://sites.google.com/view/dart2022/" target="_blank">DART workshop</a> paper got the <b>Best Paper Honorable Mention Award</b>.
 	</li>
 	<li>
 		[09/2022] One paper was accepted by NeurIPS 2022.
@@ -226,6 +233,11 @@
 		<a href="https://arxiv.org/abs/2207.07889" target="_blank">You Should Look at All Objects</a><br>
 		Zhenchao Jin, Dongdong Yu, Luchuan Song, Zehuan Yuan, <b>Lequan Yu</b>.<br>
 		<em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/abstract/document/9908146" target="_blank">Domain-incremental Cardiac Image Segmentation with Style-oriented Replay and Domain-sensitive Feature Whitening</a><br>
+		Kang Li, <b>Lequan Yu</b>, Pheng-Ann Heng.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
 	<li>
 		<a href="https://arxiv.org/abs/2208.14876" target="_blank">NestedFormer: Nested Modality-Aware Transformer for Brain Tumor Segmentation</a><br>
@@ -862,6 +874,9 @@
 <h2>Teaching</h2>
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
+		<tr>
+			<td> 2022 Fall</td><td>BIOF1001 Introduction to Biomedical Data Science (guest lecture)</td>
+		</tr>
 		<tr>
 			<td> 2022 Fall</td><td>STAT3612 Statistical Machine Learning</td>
 		</tr>
