--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 <ul>
 	
 	<li>
+		[11/2022] One paper was accepted by AAAI 2023.
+	</li>
+	<li>
 		[10/2022] One paper was accepted by TMI.
 	</li>
 	<li>
