--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 
 <div style="height: 240px; overflow: auto;">
 <ul>
-	
+	<li>
+		[11/2022] One Co-authored paper was accepted by Nature Communications.
+	</li>
 	<li>
 		[11/2022] One paper was accepted by AAAI 2023.
 	</li>
@@ -144,49 +146,6 @@
 	<li>
 		[01/2022] One paper was accepted by TMI.
 	</li>
-	<li>
-		[12/2021] One paper was accepted by AAAI 2022.
-	</li>
-	<li>
-		[08/2021] One paper about metal artifact reduction was accepted by PMB.
-	</li>
-	<li>
-		[07/2021] We are organizing <a href="https://sites.google.com/view/CVAMD2021/">ICCV2021 workshop on Computer Vision for Automated Medical Diagnosis</a>.
-	</li>
-	<li>
-		[06/2021] Two papers were accepted by MICCAI 2021.
-	</li>
-	<li>
-		[05/2021] One paper about multi-output consistency regularization was accepeted by TMI.
-	</i>
-	<li>
-		[04/2021] One paper about self-supervised learning was accepted by TMI.
-	</li>
-	<li>
-		[04/2021] Two papers were accepted by Medical Physics.
-	</li>
-	<li>
-		[11/2020] One paper about annotation-efficient cardiac segmentation was accepted by TMI.
-	</li>
-	<li>
-		[09/2020] Two papers were accepted by TMI.
-	</li>
-	<li>
-		[07/2020] I have received the <a href="https://www.cse.cuhk.edu.hk/news/achievements/dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019/">"<font color="red">CUHK Young Scholars Thesis Award 2019</font>"</a>, the only awardee in the Faculty of Engineering.
-	</li>
-	<li>
-		[07/2020] Three papers were accepted by ECCV 2020, TMI, and MedIA. 
-	</li>
-	<li>
-		[06/2020] Four papers were accepted by MICCAI 2020. 
-	</li>
-	<li>
-		[06/2020] One paper about multi-site learning was accepted by TMI.
-	</li>
-	<li>
-		[05/2020] Two papers about semi-supervised learning for medical image analysis were accepted by TMI and TNNLS.
-	</li> 
-						
 </ul>
 </div>
 <br>
