--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[11/2022] One Co-authored paper was accepted by Nature Communications.
+		[11/2022] One co-authored paper was accepted by Nature Communications.
 	</li>
 	<li>
 		[11/2022] One paper was accepted by AAAI 2023.
