--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
 		[11/2022] One co-authored paper was accepted by Nature Communications.
 	</li>
 	<li>
+		[11/2022] One paper was accepted by TMI.
+	</li>
+	<li>
 		[11/2022] One paper was accepted by AAAI 2023.
 	</li>
 	<li>
