--- a/index.html
+++ b/index.html
@@ -181,6 +181,23 @@
 	</ul>
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
+	
+	<li>
+		<a href="" target="_blank">MulGT: Multi-task Graph-Transformer with Task-aware Knowledge Injection and Domain Knowledge-driven Pooling for Whole Slide Image Analysis</a><br>
+		Weiqin Zhao, Shujun Wang, Maximus Yeung, Tianye Niu, <b>Lequan Yu</b><br>
+		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">MuRCL: Multi-instance Reinforcement Contrastive Learning for Whole Slide Image Classification</a><br>
+		Zhonghang Zhu, <b>Lequan Yu</b>, Wei Wu, Rongshan Yu, Defu Zhang, Liansheng Wang <br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Leveraging data-driven self-consistency for high-fidelity gene expression recovery</a><br>
+		Md Tauhidul Islam, Jen-Yeu Wang, Hongyi Ren, Xiaomeng Li, Masoud Badiei Khuzani, Shengtian Sang, <b>Lequan Yu</b>, Liyue Shen, Wei Zhao, Lei Xing<br>
+		Zhonghang Zhu, <b>Lequan Yu</b>, Wei Wu, Rongshan Yu, Defu Zhang, Liansheng Wang <br>
+		<em>Nature Communications</em>, 2022.</br>
+	</li>
 	<li>
 		<a href="" target="_blank">Multi-Granularity Cross-modal Alignment for Generalized Medical Visual Representation Learning</a><br>
 		Fuying Wang, Yuyin Zhou, Shujun Wang, Varut Vardhanabhuti, <b>Lequan Yu</b>.<br>
