--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	I am an assistant professor at The University of Hong Kong. My research lies at the intersection of artificial intelligence and healthcare. 
 	I am dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images, to enable reliable clinical decision making.  
 	Specifically, we focus on: 
-	1) developing multi-modal learning algorithms to intergrate multi-scale heterogeneous biomedical data for disease prevention, diagnosis, and prognosis; 
+	1) developing multi-modal learning algorithms to intergrate multi-scale biomedical data for disease prevention, diagnosis, and prognosis; 
 	2) building real-world learning systems to learn reliable, generalizable, and fair representations from imperfect medical data;
 	and 3) developing causality-based learning algorithms to improve its interpretability for healthcare problems.
 	<!--Recently, I am working on new learning algorithms while minimizing human supervision (self-supervised, semi-supervised and multi-modality learning) and medical image reconstruction.-->
@@ -185,7 +185,7 @@
 	
 	<li>
 		<a href="" target="_blank">MulGT: Multi-task Graph-Transformer with Task-aware Knowledge Injection and Domain Knowledge-driven Pooling for Whole Slide Image Analysis</a><br>
-		Weiqin Zhao, Shujun Wang, Maximus Yeung, Tianye Niu, <b>Lequan Yu</b><br>
+		Weiqin Zhao, Shujun Wang, Maximus Yeung, Tianye Niu, <b>Lequan Yu</b>.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2023.</br>
 	</li>
 	</ul>
@@ -194,13 +194,12 @@
 	<ul>
 	<li>
 		<a href="" target="_blank">Leveraging data-driven self-consistency for high-fidelity gene expression recovery</a><br>
-		Md Tauhidul Islam, Jen-Yeu Wang, Hongyi Ren, Xiaomeng Li, Masoud Badiei Khuzani, Shengtian Sang, <b>Lequan Yu</b>, Liyue Shen, Wei Zhao, Lei Xing<br>
-		Zhonghang Zhu, <b>Lequan Yu</b>, Wei Wu, Rongshan Yu, Defu Zhang, Liansheng Wang <br>
+		Md Tauhidul Islam, Jen-Yeu Wang, Hongyi Ren, Xiaomeng Li, Masoud Badiei Khuzani, Shengtian Sang, <b>Lequan Yu</b>, Liyue Shen, Wei Zhao, Lei Xing.<br>
 		<em>Nature Communications</em>, 2022.</br>
 	</li>
 	<li>
 		<a href="" target="_blank">MuRCL: Multi-instance Reinforcement Contrastive Learning for Whole Slide Image Classification</a><br>
-		Zhonghang Zhu, <b>Lequan Yu</b>, Wei Wu, Rongshan Yu, Defu Zhang, Liansheng Wang <br>
+		Zhonghang Zhu, <b>Lequan Yu</b>, Wei Wu, Rongshan Yu, Defu Zhang, Liansheng Wang. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
 
