--- a/index.html
+++ b/index.html
@@ -777,7 +777,10 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
+		<tr><td>Ranked Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3">Stanford List</a>, 2022 </td></tr>
 		<tr><td><a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>, 2022 </td></tr>
+		<tr><td>Rising Star of Science Award by <a href="https://research.com/scientists-rankings/rising-stars">Research.com</a>, 2022 </td></tr>
+		<tr><td>IEEE TMI Distinguished Reviewer Platinum Level, 2022 </td></tr>
 		<tr><td>IEEE TMI Distinguished Reviewer Silver Level, 2021 </td></tr>
 		<tr><td> <a href="https://www.cse.cuhk.edu.hk/en/achievement/student/1317-dr-yu-lequan-received-cuhk-young-scholar-thesis-award-2019">CUHK Young Scholars Thesis Award 2019</a></td></tr>
 		<tr><td> Young Scientist Award Short-listed, Hong Kong Institution of Science, 2019 </td></tr>
