--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in machine learning, computer vision, clinical NLP, and bioinformatics. 
+	I am looking for self-motivated PhD/RA/Interns, who are interested in machine learning, computer vision, clinical NLP, and bioinformatics. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 <p>
 	If you are an HKU student interested in doing research with me, please send me an email.
 </p>
 <p>
-	Due to the large amount of emails I receive, I may not be able to respond to each one individually.
+	Due to the large amount of emails I received, I may not be able to respond to each one individually.
 </p>
 	
 
@@ -108,16 +108,16 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[01/2023] Invited to serve as Area Chair in MICCAI 2023.
+	</li>
+	<li>
 		[11/2022] One co-authored paper was accepted by Nature Communications.
 	</li>
 	<li>
-		[11/2022] One paper was accepted by TMI.
+		[11/2022] Two papers were accepted by TMI and one paper was accepted by AAAI 2023.
 	</li>
 	<li>
-		[11/2022] One paper was accepted by AAAI 2023.
-	</li>
-	<li>
-		[10/2022] One paper was accepted by TMI.
+		[10/2022] Ranked Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank">Stanford List</a>.
 	</li>
 	<li>
 		[09/2022] Our MICCAI <a href="https://cmmca2022.casconf.cn" target="_blank">CMMCA workshop</a> paper got the <b>Best Paper Award</b>.
@@ -193,18 +193,23 @@
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">Leveraging data-driven self-consistency for high-fidelity gene expression recovery</a><br>
+		<a href="https://www.nature.com/articles/s41467-022-34595-w" target="_blank">Leveraging data-driven self-consistency for high-fidelity gene expression recovery</a><br>
 		Md Tauhidul Islam, Jen-Yeu Wang, Hongyi Ren, Xiaomeng Li, Masoud Badiei Khuzani, Shengtian Sang, <b>Lequan Yu</b>, Liyue Shen, Wei Zhao, Lei Xing.<br>
 		<em>Nature Communications</em>, 2022.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">MuRCL: Multi-instance Reinforcement Contrastive Learning for Whole Slide Image Classification</a><br>
+		<a href="https://ieeexplore.ieee.org/abstract/document/9980388" target="_blank">Data Discernment for Affordable Training in Medical Image Segmentation</a><br>
+		Youyi Song, <b>Lequan Yu</b>, Baiying Lei, Kup-Sze Choi, Jing Qi. n<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/document/9975198" target="_blank">MuRCL: Multi-instance Reinforcement Contrastive Learning for Whole Slide Image Classification</a><br>
 		Zhonghang Zhu, <b>Lequan Yu</b>, Wei Wu, Rongshan Yu, Defu Zhang, Liansheng Wang. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
 
 	<li>
-		<a href="" target="_blank">Multi-Granularity Cross-modal Alignment for Generalized Medical Visual Representation Learning</a><br>
+		<a href="https://arxiv.org/abs/2210.06044" target="_blank">Multi-Granularity Cross-modal Alignment for Generalized Medical Visual Representation Learning</a><br>
 		Fuying Wang, Yuyin Zhou, Shujun Wang, Varut Vardhanabhuti, <b>Lequan Yu</b>.<br>
 		<em>Conference on Neural Information Processing Systems</em> (<i><b>NeurIPS</b></i>), 2022.</br>
 	</li>
