--- a/index.html
+++ b/index.html
@@ -870,6 +870,12 @@
 <table id="tbTeaching" border="0" width="100%">
 	<tbody>
 		<tr>
+			<td> 2023 Spring</td><td>STAT8021 Big Data Analytics</td>
+		</tr>
+		<tr>
+			<td> 2023 Spring</td><td>STAT8307 Natural Language Processing and Text Analysis</td>
+		</tr>
+		<tr>
 			<td> 2022 Fall</td><td>BIOF1001 Introduction to Biomedical Data Science (guest lecture)</td>
 		</tr>
 		<tr>
