--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 	</li>
 	<li>
 		<a href="https://ieeexplore.ieee.org/abstract/document/9980388" target="_blank">Data Discernment for Affordable Training in Medical Image Segmentation</a><br>
-		Youyi Song, <b>Lequan Yu</b>, Baiying Lei, Kup-Sze Choi, Jing Qi. n<br>
+		Youyi Song, <b>Lequan Yu</b>, Baiying Lei, Kup-Sze Choi, Jing Qin.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
 	<li>
