--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[03/2023] Three papers were accepted by CVPR 2023.
+	</li>
+	<li>
 		[01/2023] Invited to serve as Area Chair in MICCAI 2023.
 	</li>
 	<li>
