--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 	<ul>
 	
 	<li>
-		<a href="" target="_blank">MulGT: Multi-task Graph-Transformer with Task-aware Knowledge Injection and Domain Knowledge-driven Pooling for Whole Slide Image Analysis</a><br>
+		<a href="https://arxiv.org/abs/2302.10574" target="_blank">MulGT: Multi-task Graph-Transformer with Task-aware Knowledge Injection and Domain Knowledge-driven Pooling for Whole Slide Image Analysis</a><br>
 		Weiqin Zhao, Shujun Wang, Maximus Yeung, Tianye Niu, <b>Lequan Yu</b>.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2023.</br>
 	</li>
