--- a/index.html
+++ b/index.html
@@ -187,6 +187,26 @@
 	<ul>
 	
 	<li>
+		<a href="" target="_blank">Histopathology Whole Slide Image Analysis with Heterogeneous Graph Representation Learning</a><br>
+		Tsai Hor Chan, Fernando Julio Cendra, Lan Ma, Guosheng Yin, <b>Lequan Yu</b>. <br>
+		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Taming Diffusion Models for Audio-Driven Co-Speech Gesture Generation</a><br>
+		Lingting Zhu, Xian Liu, Xuanyu Liu, Rui Qian, Ziwei Liu, <b>Lequan Yu</b>. <br>
+		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">MagicNet: Semi-Supervised Multi-Organ Segmentation via Magic-Cube Partition and Recovery</a><br>
+		Duowen Chen, Yunhao Bai, Wei Shen, Qingli Li, <b>Lequan Yu</b>, Yan Wang. <br>
+		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/document/10061470" target="_blank">Hybrid Graph Convolutional Network with Online Masked Autoencoder for Robust Multimodal Cancer Survival Prediction</a><br>
+		Wentai Hou, Chengxuan Lin, <b>Lequan Yu</b>, Jing Qin, Rongshan Yu, Liansheng Wang.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
+	</li>
+	<li>
 		<a href="https://arxiv.org/abs/2302.10574" target="_blank">MulGT: Multi-task Graph-Transformer with Task-aware Knowledge Injection and Domain Knowledge-driven Pooling for Whole Slide Image Analysis</a><br>
 		Weiqin Zhao, Shujun Wang, Maximus Yeung, Tianye Niu, <b>Lequan Yu</b>.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2023.</br>
