--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@
 		<tr><td> Weiqin Zhao (BEng at Beihang)(PhD Student, 2021-)</td></tr>
 		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
 		<tr><td> Xuanyu Liu (Mphil at SUSTech)(PhD Student, 2021-)(co-advisor)</td></tr>
+		<tr><td> Howard Chan Tsai Hor (BSc at HKU)(MPhil Student, 2021-)</td></tr>
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
 		<tr><td> Yan Miao (MPhil at McGill)(PhD Student, 2022-)(HKPF)</td></tr>
