--- a/index.html
+++ b/index.html
@@ -191,13 +191,19 @@
 		Tsai Hor Chan, Fernando Julio Cendra, Lan Ma, Guosheng Yin, <b>Lequan Yu</b>. <br>
 		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/WSI-HGNN" target="_blank">code</a>]
+		</p>
 	<li>
-		<a href="" target="_blank">Taming Diffusion Models for Audio-Driven Co-Speech Gesture Generation</a><br>
+		<a href="https://arxiv.org/abs/2303.09119" target="_blank">Taming Diffusion Models for Audio-Driven Co-Speech Gesture Generation</a><br>
 		Lingting Zhu, Xian Liu, Xuanyu Liu, Rui Qian, Ziwei Liu, <b>Lequan Yu</b>. <br>
 		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/Advocate99/DiffGesture" target="_blank">code</a>]
+		</p>
 	<li>
-		<a href="" target="_blank">MagicNet: Semi-Supervised Multi-Organ Segmentation via Magic-Cube Partition and Recovery</a><br>
+		<a href="https://arxiv.org/abs/2212.14310" target="_blank">MagicNet: Semi-Supervised Multi-Organ Segmentation via Magic-Cube Partition and Recovery</a><br>
 		Duowen Chen, Yunhao Bai, Wei Shen, Qingli Li, <b>Lequan Yu</b>, Yan Wang. <br>
 		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
 	</li>
@@ -211,6 +217,9 @@
 		Weiqin Zhao, Shujun Wang, Maximus Yeung, Tianye Niu, <b>Lequan Yu</b>.<br>
 		<em>AAAI Conference on Artificial Intelligence</em> (<i><b>AAAI</b></i>), 2023.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/MulGT" target="_blank">code</a>]
+		</p>
 	</ul>
 	
 	<p><font face="Arial" size="4"><b>2022</b></font></p>
@@ -236,6 +245,9 @@
 		Fuying Wang, Yuyin Zhou, Shujun Wang, Varut Vardhanabhuti, <b>Lequan Yu</b>.<br>
 		<em>Conference on Neural Information Processing Systems</em> (<i><b>NeurIPS</b></i>), 2022.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/HKU-MedAI/MGCA" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://arxiv.org/abs/2209.04471" target="_blank">MCIBI++: Soft Mining Contextual Information Beyond Image for Semantic Segmentation</a><br>
 		Zhenchao Jin, Dongdong Yu, Zehuan Yuan, <b>Lequan Yu</b>.<br>
