--- a/index.html
+++ b/index.html
@@ -234,11 +234,17 @@
 		Youyi Song, <b>Lequan Yu</b>, Baiying Lei, Kup-Sze Choi, Jing Qin.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/YouyiSong/Data-Discernment" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/9975198" target="_blank">MuRCL: Multi-instance Reinforcement Contrastive Learning for Whole Slide Image Classification</a><br>
 		Zhonghang Zhu, <b>Lequan Yu</b>, Wei Wu, Rongshan Yu, Defu Zhang, Liansheng Wang. <br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2022.</br>
 	</li>
+		<p style="margin-top:3px">
+			[<a href="https://github.com/wwu98934/MuRCL" target="_blank">code</a>]
+		</p>
 
 	<li>
 		<a href="https://arxiv.org/abs/2210.06044" target="_blank">Multi-Granularity Cross-modal Alignment for Generalized Medical Visual Representation Learning</a><br>
@@ -271,6 +277,9 @@
 		Zhaohu Xing, <b>Lequan Yu</b>, Liang Wan, Tong Han, Lei Zhu.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2022.</br>
 	</li>
+	<p style="margin-top:3px">
+			[<a href="https://github.com/920232796/NestedFormer" target="_blank">code</a>]
+		</p>
 	<li>
 		<a href="https://arxiv.org/abs/2209.01517" target="_blank">Joint Prediction of Meningioma Grade and Brain Invasion via Task-Aware Contrastive Learning</a><br>
 		Tianling Liu, Wennan Liu, <b>Lequan Yu</b>, Liang Wan, Tong Han, Lei Zhu.<br>
