--- a/index.html
+++ b/index.html
@@ -108,6 +108,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[04/2023] One co-authored paper was accepted by Radiology: Artificial Intelligence.
+	</li>
+	<li>
 		[03/2023] Three papers were accepted by CVPR 2023.
 	</li>
 	<li>
