--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <h2>Biography</h2>
 <p>
 	I am an assistant professor at The University of Hong Kong, where I direct the <a href="https://hku-medai.github.io/">Medical AI Lab</a>.  My research lies at the intersection of artificial intelligence and healthcare. 
-	I am dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images, to enable reliable clinical decision making.  
+	We are dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images, to improve medical decision-making.  
 	Specifically, we focus on: 
 	1) developing multi-modal learning algorithms to intergrate multi-scale biomedical data for disease prevention, diagnosis, prognosis, and treatment design; 
 	2) building real-world learning systems to learn reliable, trustworthy, and fair representations from imperfect medical data;
