--- a/index.html
+++ b/index.html
@@ -188,9 +188,14 @@
 -->
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
+	<li>
+		<a href="https://pubs.rsna.org/doi/10.1148/ryai.220082" target="_blank">Influence of Data Distribution on Federated Learning Performance in Tumor Segmentation</a><br>
+		Guibo Luo, Tianyu Liu, Jinghui Lu, Xin Chen, <b>Lequan Yu</b>, Jian Wu, Danny Z. Chen, Wenli Cai.<br>
+		<em>Radiology: Artificial Intelligence, 2023.</br>
+	</li>
 	
 	<li>
-		<a href="" target="_blank">Histopathology Whole Slide Image Analysis with Heterogeneous Graph Representation Learning</a><br>
+		<a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Chan_Histopathology_Whole_Slide_Image_Analysis_With_Heterogeneous_Graph_Representation_Learning_CVPR_2023_paper.pdf" target="_blank">Histopathology Whole Slide Image Analysis with Heterogeneous Graph Representation Learning</a><br>
 		Tsai Hor Chan, Fernando Julio Cendra, Lan Ma, Guosheng Yin, <b>Lequan Yu</b>. <br>
 		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
 	</li>
