--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
 	</li>
 	
 	<li>
+		<a href="" target="_blank">Transformer-based Multimodal Fusion for Survival Prediction by Integrating Whole Slide Images, Clinical, and Genomic Data</a><br>
+		Yihang Chen, Weiqin Zhao, <b>Lequan Yu</b>. <br>
+		<em>IEEE International Symposium on Biomedical Imaging</em> (<i><b>ISBI</b></i>), 2023.</br>
+	</li>
+	<li>
 		<a href="https://openaccess.thecvf.com/content/CVPR2023/papers/Chan_Histopathology_Whole_Slide_Image_Analysis_With_Heterogeneous_Graph_Representation_Learning_CVPR_2023_paper.pdf" target="_blank">Histopathology Whole Slide Image Analysis with Heterogeneous Graph Representation Learning</a><br>
 		Tsai Hor Chan, Fernando Julio Cendra, Lan Ma, Guosheng Yin, <b>Lequan Yu</b>. <br>
 		<em>IEEE/CVF Conference on Computer Vision and Pattern Recognition</em> (<i><b>CVPR</b></i>), 2023.</br>
