--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 	<li>
 		<a href="https://pubs.rsna.org/doi/10.1148/ryai.220082" target="_blank">Influence of Data Distribution on Federated Learning Performance in Tumor Segmentation</a><br>
 		Guibo Luo, Tianyu Liu, Jinghui Lu, Xin Chen, <b>Lequan Yu</b>, Jian Wu, Danny Z. Chen, Wenli Cai.<br>
-		<em>Radiology: Artificial Intelligence, 2023.</br>
+		<em>Radiology: Artificial Intelligence</em>, 2023.</br>
 	</li>
 	
 	<li>
