--- a/index.html
+++ b/index.html
@@ -756,6 +756,11 @@
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
 		<tr><td> Yan Miao (MPhil at McGill)(PhD Student, 2022-)(HKPF)</td></tr>
+		<tr><td> Yihang Chen (BSc at RUC)(incoming PhD Student, 2023-)</td></tr>		
+		<tr><td> Yanyan Huang (MPhil at ZJU)(incoming PhD Student, 2023-)</td></tr>
+		<tr><td> Feng Wu (MPhil at ZJU)(incoming PhD Student, 2023-)</td></tr>
+		<tr><td> Jiacheng Xu (BSc at HKU)(incoming PhD Student, 2023-)(HKPF)</td></tr>
+
 	</tbody>
 	</table>
 	<br>
@@ -791,13 +796,17 @@
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
+	<tr><td> Jiacheng Xu (Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
+	<tr><td> Wing Kwan Pang (Undergraduate Intern) (BSc at HKU --> MS Biostatistics at McGill)</td></tr>
+	<tr><td> Xi Zheng (2022 Summer Intern) (BSc at XJTU --> IS PhD at UW)</td></tr>
+	<tr><td> Tengfei Cui (2022 Summer Intern) (BSc at XJ-Liverpool --> MS Biostatistics at UW)</td></tr>
 	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> CS PhD at JHU)</td></tr>
+	<tr><td> Ruichen Luo (2021 Summer Intern) (BEng at ZJU --> ECE PhD at UMN)</td></tr>
 	<tr><td> Xiaoyu Zhang (2021 Summer Intern) (BEng at ZJU --> MCDS at CMU)</td></tr>
 	<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU --> Intern at Shanghai AI Lab)</td></tr>
 	<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU --> PhD at HKUST-GZ)</td></tr> 
-	<tr><td> Kang Li (Ph.D. at CUHK) </td></tr>
-	<tr><td> <a href="http://web.stanford.edu/~liyues/" target="_blank">Liyue Shen</a> (Ph.D. at Stanford)</td></tr>	
-	<tr><td> <a href="https://emmaw8.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Postdoc at Cambridge)</td></tr>
+	<tr><td> Kang Li (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
+	<tr><td> <a href="https://emma-sjwang.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Asst. Prof. at PolyU)</td></tr>
 	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Assoc. Prof. at HUST)</td></tr>
 	</tbody>
 	</table>
