--- a/index.html
+++ b/index.html
@@ -748,19 +748,20 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
+		<tr><td> Howard Tsai Hor Chan (BSc at HKU)(PhD Student, 2021-)</td></tr>
 		<tr><td> <a href="" target="_blank">Fuying Wang</a> (BEng at Tsinghua)(PhD Student, 2021-)</td></tr>
 		<tr><td> Weiqin Zhao (BEng at Beihang)(PhD Student, 2021-)</td></tr>
 		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
 		<tr><td> Xuanyu Liu (Mphil at SUSTech)(PhD Student, 2021-)(co-advisor)</td></tr>
-		<tr><td> Howard Chan Tsai Hor (BSc at HKU)(MPhil Student, 2021-)</td></tr>
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
 		<tr><td> Yan Miao (MPhil at McGill)(PhD Student, 2022-)(HKPF)</td></tr>
+	<!-- 
 		<tr><td> Yihang Chen (BSc at RUC)(incoming PhD Student, 2023-)</td></tr>		
 		<tr><td> Yanyan Huang (MPhil at ZJU)(incoming PhD Student, 2023-)</td></tr>
 		<tr><td> Feng Wu (MPhil at ZJU)(incoming PhD Student, 2023-)</td></tr>
 		<tr><td> Jiacheng Xu (BSc at HKU)(incoming PhD Student, 2023-)(HKPF)</td></tr>
-
+	-->
 	</tbody>
 	</table>
 	<br>
