--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 	I am an assistant professor at The University of Hong Kong, where I direct the <a href="https://hku-medai.github.io/">Medical AI Lab</a>.  My research lies at the intersection of artificial intelligence and healthcare. 
 	We are dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images, to improve medical decision-making.  
 	Specifically, we focus on: 
-	1) developing multi-modal learning algorithms to intergrate multi-scale biomedical data for disease prevention, diagnosis, prognosis, and treatment design; 
+	1) developing multimodal learning algorithms (e.g., multimodal foundation model) to integrate multi-scale biomedical data for disease prevention, diagnosis, prognosis, and treatment design; 
 	2) building real-world learning systems to learn reliable, trustworthy, and fair representations from imperfect medical data;
-	and 3) developing causality-based learning algorithms to improve its interpretability for healthcare problems.
+	and 3) developing causality-based learning algorithms to improve their interpretability for healthcare problems.
 	
 </p>
 	
