--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated PhD/Interns, who are interested in machine learning, computer vision, clinical NLP, and bioinformatics. 
+	I am looking for self-motivated PhD/Interns, who are interested in machine learning, multimodal learning, computer vision, clinical NLP, and bioinformatics. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 <p>
 	If you are an HKU student interested in doing research with me, please send me an email.
 </p>
 <p>
-	Due to the large amount of emails I received, I may not be able to respond to each one individually.
+	Due to the large number of emails I received, I may not be able to respond to each one individually.
 </p>
 	
 
@@ -107,6 +107,9 @@
 
 <div style="height: 240px; overflow: auto;">
 <ul>
+	<li>
+		[06/2023] One paper was accepted by TMI.
+	</li>
 	<li>
 		[04/2023] One co-authored paper was accepted by Radiology: Artificial Intelligence.
 	</li>
@@ -756,12 +759,10 @@
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
 		<tr><td> Yan Miao (MPhil at McGill)(PhD Student, 2022-)(HKPF)</td></tr>
-	<!-- 
 		<tr><td> Yihang Chen (BSc at RUC)(incoming PhD Student, 2023-)</td></tr>		
 		<tr><td> Yanyan Huang (MPhil at ZJU)(incoming PhD Student, 2023-)</td></tr>
 		<tr><td> Feng Wu (MPhil at ZJU)(incoming PhD Student, 2023-)</td></tr>
 		<tr><td> Jiacheng Xu (BSc at HKU)(incoming PhD Student, 2023-)(HKPF)</td></tr>
-	-->
 	</tbody>
 	</table>
 	<br>
