--- a/index.html
+++ b/index.html
@@ -108,6 +108,12 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[06/2023] Five papers were accepted by MICCAI 2023.
+	</li>
+	<li>
+		[06/2023] One paper was accepted by TPAMI.
+	</li>
+	<li>
 		[06/2023] One paper was accepted by TMI.
 	</li>
 	<li>
