--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
 	<li>
+		<a href="https://ieeexplore.ieee.org/document/10155265" target="_blank">Shared-specific Feature Learning with Bottleneck Fusion Transformer for Multi-modal Whole Slide Image Analysis</a><br>
+		Zhihua Wang, <b>Lequan Yu</b>, Xin Ding, Xuehong Liao, Liansheng Wang.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/abstract/document/10163830" target="_blank">Adaptive Region-Specific Loss for Improved Medical Image Segmentation</a><br>
+		Yizheng Chen, <b>Lequan Yu</b>, Jen-Yeu Wang, Neil Panjwani, etal. <br>
+		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2022.</br>
+	</li>
+	<li>
 		<a href="https://pubs.rsna.org/doi/10.1148/ryai.220082" target="_blank">Influence of Data Distribution on Federated Learning Performance in Tumor Segmentation</a><br>
 		Guibo Luo, Tianyu Liu, Jinghui Lu, Xin Chen, <b>Lequan Yu</b>, Jian Wu, Danny Z. Chen, Wenli Cai.<br>
 		<em>Radiology: Artificial Intelligence</em>, 2023.</br>
