--- a/index.html
+++ b/index.html
@@ -129,9 +129,6 @@
 		[11/2022] One co-authored paper was accepted by Nature Communications.
 	</li>
 	<li>
-		[11/2022] Two papers were accepted by TMI and one paper was accepted by AAAI 2023.
-	</li>
-	<li>
 		[10/2022] Ranked Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3" target="_blank">Stanford List</a>.
 	</li>
 	<li>
@@ -141,28 +138,7 @@
 		[09/2022] Our MICCAI <a href="https://sites.google.com/view/dart2022/" target="_blank">DART workshop</a> paper got the <b>Best Paper Honorable Mention Award</b>.
 	</li>
 	<li>
-		[09/2022] One paper was accepted by NeurIPS 2022.
-	</li>
-	<li>
-		[09/2022] One paper was accepted by TPAMI.
-	</li>
-	<li>
-		[06/2022] Four papers were accepted by MICCAI 2022.
-	</li>
-	<li>
 		[04/2022] Named on <a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>.
-	</li>
-	<li>
-		[04/2022] One paper was accepted by TMI.
-	</li>
-	<li>
-		[03/2022] One paper was accepted by CVPR 2022.
-	</li>
-	<li>
-		[02/2022] Two papers were accepted by MedIA.
-	</li>
-	<li>
-		[01/2022] One paper was accepted by TMI.
 	</li>
 </ul>
 </div>
@@ -203,9 +179,9 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
 	</li>
 	<li>
-		<a href="https://ieeexplore.ieee.org/abstract/document/10163830" target="_blank">Adaptive Region-Specific Loss for Improved Medical Image Segmentation</a><br>
-		Yizheng Chen, <b>Lequan Yu</b>, Jen-Yeu Wang, Neil Panjwani, etal. <br>
-		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2022.</br>
+		<a href="https://ieeexplore.ieee.org/abstract/document/10163830" target="_blank">Adaptive Region-Specific Loss for Improved Medical Image Segmentation</a><be>
+		Yizheng Chen, <b>Lequan Yu</b>, Jen-Yeu Wang, Neil Panjwani, Jean-Pierre Obeid, Wu Liu, Lianli Liu, Nataliya Kovalchuk, Michael Francis Gensheimer, Lucas Kas Vitzthum, Beth M Beadle, Daniel T Chang, Quynh-Thu Le, Bin Han, Lei Xing.<br>
+		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2023.</br>
 	</li>
 	<li>
 		<a href="https://pubs.rsna.org/doi/10.1148/ryai.220082" target="_blank">Influence of Data Distribution on Federated Learning Performance in Tumor Segmentation</a><br>
