--- a/index.html
+++ b/index.html
@@ -108,13 +108,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[06/2023] Five papers were accepted by MICCAI 2023.
-	</li>
-	<li>
-		[06/2023] One paper was accepted by TPAMI.
-	</li>
-	<li>
-		[06/2023] One paper was accepted by TMI.
+		[07/2023] Recent publications in 2023 Summer: 1 TPAMI, 2 TMI, 1 TIP, 5 MICCAI.
 	</li>
 	<li>
 		[04/2023] One co-authored paper was accepted by Radiology: Artificial Intelligence.
@@ -179,7 +173,7 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
 	</li>
 	<li>
-		<a href="https://ieeexplore.ieee.org/abstract/document/10163830" target="_blank">Adaptive Region-Specific Loss for Improved Medical Image Segmentation</a><be>
+		<a href="https://ieeexplore.ieee.org/abstract/document/10163830" target="_blank">Adaptive Region-Specific Loss for Improved Medical Image Segmentation</a><br>
 		Yizheng Chen, <b>Lequan Yu</b>, Jen-Yeu Wang, Neil Panjwani, Jean-Pierre Obeid, Wu Liu, Lianli Liu, Nataliya Kovalchuk, Michael Francis Gensheimer, Lucas Kas Vitzthum, Beth M Beadle, Daniel T Chang, Quynh-Thu Le, Bin Han, Lei Xing.<br>
 		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2023.</br>
 	</li>
