--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[07/2023] Recent publications in 2023 Summer: 1 TPAMI, 2 TMI, 1 TIP, 5 MICCAI.
+		[07/2023] Recent publications in 2023 Summer: 1 TPAMI, 2 TMI, 1 TIP, 1 JBHI, 5 MICCAI.
 	</li>
 	<li>
 		[04/2023] One co-authored paper was accepted by Radiology: Artificial Intelligence.
@@ -170,6 +170,11 @@
 	<li>
 		<a href="https://ieeexplore.ieee.org/document/10155265" target="_blank">Shared-specific Feature Learning with Bottleneck Fusion Transformer for Multi-modal Whole Slide Image Analysis</a><br>
 		Zhihua Wang, <b>Lequan Yu</b>, Xin Ding, Xuehong Liao, Liansheng Wang.<br>
+		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href=" " target="_blank">RECIST-induced Reliable Learning: Geometry-driven Label Propagation for Universal Lesion Segmentation</a><br>
+		Lianyu Zhou, <b>Lequan Yu</b>, Liansheng Wang.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
 	</li>
 	<li>
