--- a/index.html
+++ b/index.html
@@ -742,10 +742,10 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> Howard Tsai Hor Chan (BSc at HKU)(PhD Student, 2021-)</td></tr>
-		<tr><td> <a href="" target="_blank">Fuying Wang</a> (BEng at Tsinghua)(PhD Student, 2021-)</td></tr>
+		<tr><td> <a href="https://howardchanth.github.io" target="_blank">Howard Tsai Hor Chan</a> (BSc at HKU)(PhD Student, 2021-)</td></tr>
+		<tr><td> <a href="https://github.com/fuying-wang" target="_blank">Fuying Wang</a> (BEng at Tsinghua)(PhD Student, 2021-)</td></tr>
 		<tr><td> Weiqin Zhao (BEng at Beihang)(PhD Student, 2021-)</td></tr>
-		<tr><td> <a href="https://www.linkedin.com/in/lingting-zhu-0930861b6/" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
+		<tr><td> <a href="https://github.com/Advocate99" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
 		<tr><td> Xuanyu Liu (Mphil at SUSTech)(PhD Student, 2021-)(co-advisor)</td></tr>
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
