--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 	</li>
 	
 	<li>
-		<a href="" target="_blank">Transformer-based Multimodal Fusion for Survival Prediction by Integrating Whole Slide Images, Clinical, and Genomic Data</a><br>
+		<a href="./files/ISBI2023-Transformer.pdf" target="_blank">Transformer-based Multimodal Fusion for Survival Prediction by Integrating Whole Slide Images, Clinical, and Genomic Data</a><br>
 		Yihang Chen, Weiqin Zhao, <b>Lequan Yu</b>. <br>
 		<em>IEEE International Symposium on Biomedical Imaging</em> (<i><b>ISBI</b></i>), 2023.</br>
 	</li>
