--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
 	</li>
 	<li>
-		<a href=" " target="_blank">RECIST-induced Reliable Learning: Geometry-driven Label Propagation for Universal Lesion Segmentation</a><br>
+		<a href="https://ieeexplore.ieee.org/document/10180076" target="_blank">RECIST-induced Reliable Learning: Geometry-driven Label Propagation for Universal Lesion Segmentation</a><br>
 		Lianyu Zhou, <b>Lequan Yu</b>, Liansheng Wang.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
 	</li>
