--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	We are dedicated to designing advanced machine learning algorithms for biomedical data analysis, with a primary focus on medical images, to improve medical decision-making.  
 	Specifically, we focus on: 
 	1) developing multimodal learning algorithms (e.g., multimodal foundation model) to integrate multi-scale biomedical data for disease prevention, diagnosis, prognosis, and treatment design; 
-	2) building real-world learning systems to learn reliable, trustworthy, and fair representations from imperfect medical data;
+	2) building real-world learning systems to learn generalizable, trustworthy, and fair representations from imperfect medical data;
 	and 3) developing causality-based learning algorithms to improve their interpretability for healthcare problems.
 	
 </p>
