--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
-		[07/2023] Recent publications in 2023 Summer: 1 TPAMI, 2 TMI, 1 TIP, 1 JBHI, 5 MICCAI.
+		[07/2023] Recent publications in 2023 Summer: 1 TPAMI, 2 TMI, 1 TIP, 1 JBHI, 1 ICCV, 5 MICCAI.
 	</li>
 	<li>
 		[04/2023] One co-authored paper was accepted by Radiology: Artificial Intelligence.
@@ -168,6 +168,26 @@
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
 	<li>
+		<a href="" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
+		Yanyan Huang, Weiqin Zhao, Shujun Wang, Yu Fu, Yuming Jiang, <b>Lequan Yu</b>.<br>
+		<em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2023.</br>
+	</li>	
+	<li>
+		<a href="" target="_blank">HIGT: Hierarchical Interaction Graph-Transformer for Whole Slide Image Analysis</a><br>
+		Ziyu Guo, Weiqin Zhao, Shujun Wang, <b>Lequan Yu</b>.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">Make-A-Volume: Leveraging Latent Diffusion Models for Cross-Modality 3D Brain MRI Synthesis</a><br>
+		Lingting Zhu, Zeyue Xue, Zhenchao Jin, Xian Liu, Jingzhen He, Ziwei Liu, <b>Lequan Yu</b>.<br>
+		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="https://ieeexplore.ieee.org/abstract/document/10163830" target="_blank">Adaptive Region-Specific Loss for Improved Medical Image Segmentation</a><br>
+		Yizheng Chen, <b>Lequan Yu</b>, Jen-Yeu Wang, Neil Panjwani, Jean-Pierre Obeid, Wu Liu, Lianli Liu, Nataliya Kovalchuk, Michael Francis Gensheimer, Lucas Kas Vitzthum, Beth M Beadle, Daniel T Chang, Quynh-Thu Le, Bin Han, Lei Xing.<br>
+		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2023.</br>
+	</li>
+	<li>
 		<a href="https://ieeexplore.ieee.org/document/10155265" target="_blank">Shared-specific Feature Learning with Bottleneck Fusion Transformer for Multi-modal Whole Slide Image Analysis</a><br>
 		Zhihua Wang, <b>Lequan Yu</b>, Xin Ding, Xuehong Liao, Liansheng Wang.<br>
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
@@ -178,9 +198,9 @@
 		<em>IEEE Transactions on Medical Imaging</em> (<i><b>TMI</b></i>), 2023.</br>
 	</li>
 	<li>
-		<a href="https://ieeexplore.ieee.org/abstract/document/10163830" target="_blank">Adaptive Region-Specific Loss for Improved Medical Image Segmentation</a><br>
-		Yizheng Chen, <b>Lequan Yu</b>, Jen-Yeu Wang, Neil Panjwani, Jean-Pierre Obeid, Wu Liu, Lianli Liu, Nataliya Kovalchuk, Michael Francis Gensheimer, Lucas Kas Vitzthum, Beth M Beadle, Daniel T Chang, Quynh-Thu Le, Bin Han, Lei Xing.<br>
-		<em>IEEE Transactions on Pattern Analysis and Machine Intelligence</em> (<i><b>TPAMI</b></i>), 2023.</br>
+		<a href="https://ieeexplore.ieee.org/abstract/document/10183842/" target="_blank">nnFormer: Volumetric Medical Image Segmentation via a 3D Transformer</a><br>
+		Hong-Yu Zhou, Jiansen Guo, Yinghao Zhang, Xiaoguang Han, <b>Lequan Yu</b>, Liansheng Wang, and Yizhou Yu.<br>
+		<em>IEEE Transactions on Image Processing</em> (<i><b>TIP</b></i>), 2023.</br>
 	</li>
 	<li>
 		<a href="https://pubs.rsna.org/doi/10.1148/ryai.220082" target="_blank">Influence of Data Distribution on Federated Learning Performance in Tumor Segmentation</a><br>
