--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
 <p style="color:red;">
-	I am looking for self-motivated PhD/Interns, who are interested in machine learning, multimodal learning, computer vision, clinical NLP, and bioinformatics. 
+	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in multimodal learning, computer vision, clinical NLP, and bioinformatics. 
 	Welcome to drop me an email with your CV and transcripts. Remote collaboration is also welcome!
 </p>
 <p>
