--- a/index.html
+++ b/index.html
@@ -770,10 +770,10 @@
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
 		<tr><td> Yan Miao (MPhil at McGill)(PhD Student, 2022-)(HKPF)</td></tr>
-		<tr><td> Yihang Chen (BSc at RUC)(incoming PhD Student, 2023-)</td></tr>		
-		<tr><td> Yanyan Huang (MPhil at ZJU)(incoming PhD Student, 2023-)</td></tr>
-		<tr><td> Feng Wu (MPhil at ZJU)(incoming PhD Student, 2023-)</td></tr>
-		<tr><td> Jiacheng Xu (BSc at HKU)(incoming PhD Student, 2023-)(HKPF)</td></tr>
+		<tr><td> Yihang Chen (BSc at RUC)(PhD Student, 2023-)</td></tr>		
+		<tr><td> Yanyan Huang (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
+		<tr><td> Feng Wu (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
+		<tr><td> Jiacheng Xu (BSc at HKU)(PhD Student, 2023-)(HKPF)</td></tr>
 	</tbody>
 	</table>
 	<br>
