--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 <div style="height: 240px; overflow: auto;">
 <ul>
 	<li>
+		[09/2023] Two papers were accepted by NeurIPS 2023.
+	</li>
+	<li>
 		[07/2023] Recent publications in 2023 Summer: 1 TPAMI, 2 TMI, 1 TIP, 1 JBHI, 1 ICCV, 5 MICCAI.
 	</li>
 	<li>
@@ -169,17 +172,27 @@
 	<p><font face="Arial" size="4"><b>2023</b></font></p>
 	<ul>
 	<li>
-		<a href="" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
+		<a href="" target="_blank">Adaptive Uncertainty Estimation via High-Dimensional Testing on Latent Representations</a><br>
+		Tsai Hor Chan, Kin Wai Lau, Jiajun Shen, Guosheng Yin, <b>Lequan Yu</b>.<br>
+		<em>Conference on Neural Information Processing Systems</em> (<i><b>NeurIPS</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="" target="_blank">IDRNet: Intervention-Driven Relation Network for Semantic Segmentation</a><br>
+		Zhenchao Jin, Xiaowei Hu, Lingting Zhu, Luchuan Song, Li Yuan, <b>Lequan Yu</b>.<br>
+		<em>Conference on Neural Information Processing Systems</em> (<i><b>NeurIPS</b></i>), 2023.</br>
+	</li>
+	<li>
+		<a href="https://arxiv.org/abs/2308.13324" target="_blank">ConSlide: Asynchronous Hierarchical Interaction Transformer with Breakup-Reorganize Rehearsal for Continual Whole Slide Image Analysis</a><br>
 		Yanyan Huang, Weiqin Zhao, Shujun Wang, Yu Fu, Yuming Jiang, <b>Lequan Yu</b>.<br>
 		<em>International Conference on Computer Vision</em> (<i><b>ICCV</b></i>), 2023.</br>
 	</li>	
 	<li>
-		<a href="" target="_blank">HIGT: Hierarchical Interaction Graph-Transformer for Whole Slide Image Analysis</a><br>
+		<a href="https://arxiv.org/abs/2309.07400" target="_blank">HIGT: Hierarchical Interaction Graph-Transformer for Whole Slide Image Analysis</a><br>
 		Ziyu Guo, Weiqin Zhao, Shujun Wang, <b>Lequan Yu</b>.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023.</br>
 	</li>
 	<li>
-		<a href="" target="_blank">Make-A-Volume: Leveraging Latent Diffusion Models for Cross-Modality 3D Brain MRI Synthesis</a><br>
+		<a href="https://arxiv.org/abs/2307.10094" target="_blank">Make-A-Volume: Leveraging Latent Diffusion Models for Cross-Modality 3D Brain MRI Synthesis</a><br>
 		Lingting Zhu, Zeyue Xue, Zhenchao Jin, Xian Liu, Jingzhen He, Ziwei Liu, <b>Lequan Yu</b>.<br>
 		<em>Medical Image Computing and Computer Assisted Intervention</em> (<i><b>MICCAI</b></i>), 2023.</br>
 	</li>
