--- a/index.html
+++ b/index.html
@@ -865,7 +865,9 @@
 <table style="border-spacing:2px">
 	
 		<tbody>
-		<tr><td>Ranked Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3">Stanford List</a>, 2022 </td></tr>
+		<tr><td>MICCAI 2023 Young Scientist Publication Impact Award Runner-up</a>, 2023 </td></tr>
+		<tr><td>国家教育部高等学校科学研究优秀成果奖(科学技术), 自然科学二等奖 (排名: 4/5)</a>, 2022 </td></tr>
+		<tr><td>Ranked Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/3">Stanford List</a>, 2022 \& 2023</td></tr>
 		<tr><td><a href="https://xueshu.baidu.com/usercenter/index/aischolar2022">the World's First List of Top 150 Chinese Young Scholars in Artificial Intelligence</a>, 2022 </td></tr>
 		<tr><td>Rising Star of Science Award by <a href="https://research.com/scientists-rankings/rising-stars">Research.com</a>, 2022 </td></tr>
 		<tr><td>IEEE TMI Distinguished Reviewer Platinum Level, 2022 </td></tr>
