--- a/index.html
+++ b/index.html
@@ -769,65 +769,48 @@
 		<tr><td> <a href="https://github.com/fuying-wang" target="_blank">Fuying Wang</a> (BEng at Tsinghua)(PhD Student, 2021-)</td></tr>
 		<tr><td> Weiqin Zhao (BEng at Beihang)(PhD Student, 2021-)</td></tr>
 		<tr><td> <a href="https://github.com/Advocate99" target="_blank">Lingting Zhu</a> (BEng at ZJU)(PhD Student, 2021-) (HKU-PS)</td></tr>
-		<tr><td> Xuanyu Liu (Mphil at SUSTech)(PhD Student, 2021-)(co-advisor)</td></tr>
 		<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a> (MPhil at USTC)(PhD Student, 2022-) </td></tr>
 		<tr><td> Zhuo Liang (BSc at HKU)(PhD Student, 2022-)(HKU-PS)</td></tr>
-		<tr><td> Yan Miao (MPhil at McGill)(PhD Student, 2022-)(HKPF)</td></tr>
 		<tr><td> Yihang Chen (BSc at RUC)(PhD Student, 2023-)</td></tr>		
 		<tr><td> Yanyan Huang (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
 		<tr><td> Feng Wu (MPhil at ZJU)(PhD Student, 2023-)</td></tr>
 		<tr><td> Jiacheng Xu (BSc at HKU)(PhD Student, 2023-)(HKPF)</td></tr>
+		<tr><td> Liting Yu (BSc at XJTU)(PhD Student, 2023-)</td></tr>	
 	</tbody>
 	</table>
 	<br>
 	
-	<!-- 
-	<b>Research Assistants:</b>
-	<br>	
+	
+	<b>co-supervised Students:</b>
+	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-	<tr><td> <a href="https://charlespikachu.github.io/" target="_blank">Zhenchao Jin</a></td></tr>
+		<tr><td> Xuanyu Liu (Mphil at SUSTech)(PhD Student, 2021-)(w/ K.C. Yuen)</td></tr>
+		<tr><td> Yan Miao (MPhil at McGill)(PhD Student, 2022-)(HKPF) (w/ Wai-Kay Seto)</td></tr>
+		<tr><td> Pei Cai (MPhil at NTU)(PhD Student, 2023-) (w/ Jianpan Huang)</td></tr>
 	</tbody>
 	</table>
 	<br>
-	
-	<b>Undergraduate & Master Students:</b>
-	<br>	
-	<table style="border-spacing:2px">
-	<tbody>
-		<tr><td> Miao Yan (Master at McGill)</td></tr>
-		<tr><td> Zhuo Liang (BSc at HKU)</td></tr>
-		<tr><td> Ruichen Luo (BEng at ZJU)</td></tr>
-		<tr><td> Zhe Wang (BEng at PolyU)</td></tr>
-		<tr><td> Yiqing Shen (BSc at SJTU)</td></tr>
-		<tr><td> Zeqi Xiao (BEng at ZJU)</td></tr>
-		<tr><td> Yijun Yang (BEng at SDU)</td></tr>
- 		<tr><td> Ruichen Luo (BEng at ZJU)(incoming PhD Student, HKU-PS)</td></tr>
-	-->
-	</tbody>
-	</table>
-	<br> 
 	
 	<b>Previous Mentorship:</b>
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-	<tr><td> Jiacheng Xu (Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
-	<tr><td> Wing Kwan Pang (Undergraduate Intern) (BSc at HKU --> MS Biostatistics at McGill)</td></tr>
-	<tr><td> Xi Zheng (2022 Summer Intern) (BSc at XJTU --> IS PhD at UW)</td></tr>
-	<tr><td> Tengfei Cui (2022 Summer Intern) (BSc at XJ-Liverpool --> MS Biostatistics at UW)</td></tr>
-	<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> CS PhD at JHU)</td></tr>
-	<tr><td> Ruichen Luo (2021 Summer Intern) (BEng at ZJU --> ECE PhD at UMN)</td></tr>
-	<tr><td> Xiaoyu Zhang (2021 Summer Intern) (BEng at ZJU --> MCDS at CMU)</td></tr>
-	<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU --> Intern at Shanghai AI Lab)</td></tr>
-	<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU --> PhD at HKUST-GZ)</td></tr> 
-	<tr><td> Kang Li (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
-	<tr><td> <a href="https://emma-sjwang.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Asst. Prof. at PolyU)</td></tr>
-	<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Assoc. Prof. at HUST)</td></tr>
+		<tr><td> Jiacheng Xu (Undergraduate Intern) (BSc at HKU --> PhD at HKU)</td></tr>
+		<tr><td> Wing Kwan Pang (Undergraduate Intern) (BSc at HKU --> MS Biostatistics at McGill)</td></tr>
+		<tr><td> Xi Zheng (2022 Summer Intern) (BSc at XJTU --> IS PhD at UW)</td></tr>
+		<tr><td> Tengfei Cui (2022 Summer Intern) (BSc at XJ-Liverpool --> MS Biostatistics at UW)</td></tr>
+		<tr><td> <a href="https://yiqings.github.io/" target="_blank">Yiqing Shen</a> (2021 Summer Intern) (BSc at SJTU --> CS PhD at JHU)</td></tr>
+		<tr><td> Ruichen Luo (2021 Summer Intern) (BEng at ZJU --> ECE PhD at UMN)</td></tr>
+		<tr><td> Xiaoyu Zhang (2021 Summer Intern) (BEng at ZJU --> MCDS at CMU)</td></tr>
+		<tr><td> Zeqi Xiao (2021 Summer Intern) (BEng at ZJU --> Intern at Shanghai AI Lab)</td></tr>
+		<tr><td> <a href="https://yijun-yang.github.io/" target="_blank">Yijun Yang</a> (2021 Summer Intern) (BEng at SDU --> PhD at HKUST-GZ)</td></tr> 
+		<tr><td> Kang Li (Ph.D. at CUHK) (now, Postdoc at CUHK)</td></tr>
+		<tr><td> <a href="https://emma-sjwang.github.io/" target="_blank">Shujun Wang</a> (Ph.D. at CUHK) (now, Asst. Prof. at PolyU)</td></tr>
+		<tr><td> <a href="https://nini-lxz.github.io/" target="_blank">Xianzhi Li</a> (Ph.D. at CUHK) (now, Assoc. Prof. at HUST)</td></tr>
 	</tbody>
 	</table>
-<!-- <a href="https://people.ucsc.edu/~jwang470/about/">Jialu Wang</a>, UCSC PhD student (co-advising with <a href="http://www.yliuu.com">Yang Liu</a>)<br>-->
-<br>
+	<br>
 </div>
 	
 <div id="talk">
