--- a/index.html
+++ b/index.html
@@ -93,16 +93,8 @@
 
 <p style="color:red;">
 	Please email me if you are interested in joining our lab. 
-	We have Postdoc/RA openings in multimodal learning, computational pathology, bioinformatics, and clinical NLP. Please contact me if you are interested in this opportunity.
+	We have Postdoc/PhD/RA openings in multimodal learning, computational pathology, and bioinformatics. Please contact me if you are interested in this opportunity.
 </p>
-<!--    
-	I am looking for self-motivated Postdoc/PhD/RA/Interns, who are interested in multimodal learning, computer vision, clinical NLP, and bioinformatics. 
-	Welcome to drop me an email with your CV and transcripts. 
--->
-<p>
-	Due to the large number of emails I received, I may not be able to respond to each one individually.
-</p>
-	
 
 <h2>News</h2>
 
