--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
 	<br>
 	
 	
-	<b>co-supervised Students:</b>
+	<b>Co-supervised Students:</b>
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
